--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
         <div class="flex flex-col md:flex-row items-center">
             <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
                 <div class="w-64 h-64 rounded-full overflow-hidden border-4 border-primary shadow-lg">
-                    <img src="{{ url_for('static', filename='images/profile.jpg') }}" alt="Profile Picture" class="w-full h-full object-cover">
+                    <img src="{{ url_for('static', filename='/Static/images/profile.jpg') }}" alt="Profile Picture" class="w-full h-full object-cover">
                 </div>
             </div>
             <div class="md:w-2/3 md:pl-12">
