--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="md:w-1/2 flex justify-center">
                 <div class="w-64 h-70 md:w-64 md:h-80 rounded-full overflow-hidden border-4 border-white shadow-xl">
-                    <img src="{{ url_for('static', filename='/Static/images/profile.jpg') }}" alt="Profile Picture" class="w-full h-full object-cover">
+                    <img src="{{ url_for('static', filename='images/profile.jpg') }}" alt="Profile Picture" class="w-full h-full object-cover">
                 </div>
             </div>
         </div>
