--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
         <div class="flex flex-col md:flex-row items-center">
             <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
                 <div class="w-64 h-64 rounded-full overflow-hidden border-4 border-primary shadow-lg">
-                    <img src="{{ url_for('static', filename='/Static/images/profile.jpg') }}" alt="Profile Picture" class="w-full h-full object-cover">
+                    <img src="{{ url_for('static', filename='images/profile.jpg') }}" alt="Profile Picture" class="w-full h-full object-cover">
                 </div>
             </div>
             <div class="md:w-2/3 md:pl-12">
@@ -25,7 +25,7 @@
                     to open-source projects, writing technical blogs, or exploring new technologies.
                 </p>
                 <div class="flex space-x-4">
-                    <a href="/static/images/Resume.pdf" download class="bg-primary text-white px-6 py-3 rounded-lg font-medium hover:bg-secondary transition duration-300">Download CV</a>
+                    <a href="Resume.pdf" download class="bg-primary text-white px-6 py-3 rounded-lg font-medium hover:bg-secondary transition duration-300">Download CV</a>
                     <a href="/contact" class="border-2 border-primary text-primary px-6 py-3 rounded-lg font-medium hover:bg-primary hover:text-white transition duration-300">Contact Me</a>
                 </div>
             </div>
